# cycel

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
benchmarks/: zmq-bench_throughput_20260417T003019_836157Z.json
examples/: evlib.py
examples/arrow/: file_exists.py
examples/crypto/: bitcoin.py  ethereum.py  keccak.py  solana.py
examples/databases/: clickhouse_status.py
examples/logging/: basic_logger.py
examples/net/: get.py
examples/zmq/: bench.py  conc.py  pub.py  sub.py
examples/zmq/tbs/: bench_v1.py
src/cycel/: __about__.py  __init__.py  evlib.py
src/cycel/arrow/: __init__.py  arrow.pyi  arrow.pyx
src/cycel/clock/: __init__.pxd  __init__.py  clock.c  conversions.pyx  iterators.c  iterators.pxd  iterators.pyi  ranges.c  ranges.pxd  rfc2822.pyx
src/cycel/crypto/: __init__.py
src/cycel/crypto/curves/: __init__.py  ed25519.pyi  ed25519.pyx  secp256k1.pyi  secp256k1.pyx
src/cycel/crypto/hashes/: __init__.py  _keccak.py
src/cycel/crypto/serde/: __init__.py  _msgpack_pack.py
src/cycel/crypto/signing/: __init__.py
src/cycel/databases/: clickhouse.py  questdb.py  sqlite.py  timescaledb.py
src/cycel/logging/: __init__.py
src/cycel/net/: __init__.pxd  __init__.py  http.pxd  http.pyi  http.pyx
src/cycel/zip/: __init__.py  zip.cpp
src/cycel/zmq/: __init__.pxd  __init__.py  libzmq.pxd  zmq_async.pxd  zmq_async.pyi  zmq_async.pyx
tests/crypto/: test_crypto.py  test_curves_stability.py
